--- a/src/main/resources/items/crafting-materials.yml
+++ b/src/main/resources/items/crafting-materials.yml
@@ -111,6 +111,6 @@ itemsList:
       - ""
       - "<dark_purple>Future Sight<gray>: Converts your next drop"
       - "<gray>to one tier higher. If is an exotic drop,"
-      - "<gray>you""ll receive an extra common drop."
+      - "<gray>you will receive an extra common drop."
       - ""
       - "<dark_gray>Tags: <red>Archaeology Crafting Material"
