--- a/src/main/resources/items/bxp-stars.yml
+++ b/src/main/resources/items/bxp-stars.yml
@@ -2,7 +2,7 @@
 itemsList:
   small_star: # itemName for commands
     material: AMETHYST_SHARD # base material
-    name: "&aSmall BXP Star"
+    name: "<common>Small BXP Star"
     custom-model-data: 100000
     lore:
       - "<gray>[<yellow><bold>!</bold><gray>] <green>Right-click to consume"
@@ -13,7 +13,7 @@ itemsList:
       - "<dark_gray>Tags: <red>Archaeology BXP Star"
   medium_star: # itemName for commands
     material: AMETHYST_SHARD # base material
-    name: "&bMedium BXP Star"
+    name: "<aqua>Medium BXP Star"
     custom-model-data: 100001
     lore:
       - "<gray>[<yellow><bold>!</bold><gray>] <green>Right-click to consume"
@@ -24,7 +24,7 @@ itemsList:
       - "<dark_gray>Tags: <red>Archaeology BXP Star"
   large_star: # itemName for commands
     material: AMETHYST_SHARD # base material
-    name: "&5Large BXP Star"
+    name: "<dark_purple>Large BXP Star"
     custom-model-data: 100002
     lore:
       - "<gray>[<yellow><bold>!</bold><gray>] <green>Right-click to consume"
@@ -35,7 +35,7 @@ itemsList:
       - "<dark_gray>Tags: <red>Archaeology BXP Star"
   huge_star: # itemName for commands
     material: AMETHYST_SHARD # base material
-    name: "&4Huge BXP Star"
+    name: "<dark_red>Huge BXP Star"
     custom-model-data: 100003
     lore:
       - "<gray>[<yellow><bold>!</bold><gray>] <green>Right-click to consume"
